# BLE_Blockchain

./: .env.example  .gitignore  README.md  delete_excess_data.py  main.py  pyproject.toml  requirements.txt  send_and_receive.py  settings1.json  settings2.json  settings3.json  settings4.json
.cursor/rules/: japanese-writing.mdc  python-backend.mdc  python-codes.mdc  python-test-generation.mdc
.github/: pull_request_template.md
.github/workflows/: pylint.yml
ble/: discover.py  l2cap_client.py  l2cap_server.py  message_codec.py
blockchain/: aggregator.py  export.py  myblock.py  persistence.py  sync.py  validator.py
cipher/: __init__.py  aes_cipher.py  cipher.py
config/: blockchain.json  crypto.json  device_settings.py  l2cap.json  loader.py  paths.json  runtime_profiles.json
docker/chain-validator/: Dockerfile  README.md  validate_entry.py
docs/: README.md  conf.py  index.rst  modules.rst
docs/api/: ble.rst  blockchain.rst  cipher.rst  config.rst  delete_excess_data.rst  entrypoint.rst  index.rst  install_package.rst  main.rst  pandas_d_encode.rst  send_and_receive.rst
docs/diagrams/: ble-blockchain-architecture.drawio
docs/guides/: overview.rst
keys/: README.md  device1_public.pem  device2_public.pem  device3_public.pem  device4_public.pem
scripts/: generate_device_keys.py  install_package.py
src/ble_blockchain/: __init__.py  paths.py
tests/: conftest.py  conftest_helpers.py
tests/integration/: test_chain_pipeline.py
tests/unit/: test_aes_cipher.py  test_cipher_sign.py  test_delete_excess_data.py  test_device_settings.py  test_discover.py  (+7 more)
(+21 files in other folders)
