[project]
name = "ble-blockchain"
version = "0.1.0"
description = "BLE and blockchain integration for thesis experiments"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bleak",
    "pandas",
    "numpy",
    "ecdsa",
    "openpyxl",
    "pycryptodome",
    "pybluez; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pylint>=3.0",
    "pytest>=7.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
