[project]
name = "ble-blockchain"
version = "0.1.0"
description = "BLE and blockchain integration for thesis experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bleak",
    "pandas",
    "numpy",
    "ecdsa",
    "openpyxl",
    "pycryptodome",
    "pybluez; sys_platform == 'linux'",
]

[project.scripts]
ble-blockchain = "ble_blockchain.app.main:main"

[dependency-groups]
dev = [
    "pylint>=3.0",
    "pytest>=7.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ble_blockchain"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.pylint]
ignored-modules = ["bluetooth"]

[tool.pylint.main]
py-version = "3.10"
